Tune pools and upgrade update process